# fastapi-vue

./: .env.example  .gitignore  Dockerfile  README.md  app.py  fastapi-vue.code-workspace  fastapi-vuejs.code-workspace  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
alembic/versions/: 2023_05_12_1438-dd323cce0ef4_first_migration.py
back/: .env.example  README.md  main.py  requirements.txt
back/alembic/: env.py
back/alembic/versions/: 03851f794541_first_migration.py  2023_04_26_1127-84ec824554fc_first_migration.py
back/lang/en/LC_MESSAGES/: messages.mo  messages.po
back/lang/pt_br/LC_MESSAGES/: messages.mo  messages.po
back/models/: __init__.py  auth.py
back/modules/: __init__.py
back/modules/auth/: schemas.py  urls.py
back/modules/group/: schemas.py  urls.py
back/modules/user/: resources.py  schemas.py  urls.py
back/utils/: __init__.py  auth.py  babel.py  cache.py  comands.py  config.py  database.py  helper.py  messages.pot  middleware.py  users.py
back/utils/cli/: __init__.py  group_perms.py  users.py
core/: caches.py  databases.py  exceptions.py  hashing.py  settings.py
front/: .env.example  package-lock.json  package.json  vite.config.js
front/src/: App.vue  api.js  bootstrap.js  exceptions.js  i18n.js  main.js
front/src/components/: AuthenticationCardLogo.vue  Dropdown.vue  ItemPagination.vue  LangChange.vue  MemoryUse.vue  NavDropdown.vue  NavLink.vue  Pagination.vue  Welcome.vue
front/src/layouts/: AppLayout.vue
front/src/locales/: en.json  pt.json
front/src/pages/: Dashboard.vue  HomePage.vue  PageNotFound.vue
front/src/pages/Auth/: ConfirmPassword.vue  ForgotPassword.vue  Login.vue  LoginUser.vue  Register.vue  ResetPassword.vue  TwoFactorChallenge.vue  VerifyEmail.vue
front/src/pages/Groups/: CreateEdit.vue  GroupIndex.vue  Index.vue
front/src/router/: index.js  user.js
front/src/sass/: _variables.scss  app.scss
front/src/stores/: auth.js  shared.js
front/src/views/: HomeView.vue
lang/en/LC_MESSAGES/: messages.po
migrations/: env.py
migrations/versions/: a9c75a5e6e00_init.py
models/: __init__.py  auth.py
modules/: __init__.py
modules/user/: urls.py
resources/: auth.py
routes/: __init__.py  auth.py
schemas/: auth.py
tests/: conftest.py  test_app.py  test_model_auth.py
utils/: __init__.py  cache.py  config.py  database.py  hashing.py  helper.py
utils/cli/: database.py  group_perms.py  translation.py  users.py
(+8 files in other folders)
